samples/_failures_safe/1761074732_8136a5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_63091206.c: In function ‘print_menu’:
./samples/SAFE/__tmp_63091206.c:152:12: error: missing terminating " character
  152 |     printf("2. Data Ready (EVENT_DATA_READY)\n
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_63091206.c:152:5: error: expected expression at end of input
  152 |     printf("2. Data Ready (EVENT_DATA_READY)\n
      |     ^~~~~~
./samples/SAFE/__tmp_63091206.c:152:5: error: expected declaration or statement at end of input
